objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Profile__c</fullName>
        <formula>Owner:User.Profile_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Role__c</fullName>
        <formula>Owner:User.User_Role_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_User_ID__c</fullName>
        <description>For Reporting purpose for Reservations team</description>
        <formula>LEFT(Owner:User.Username,Find(&quot;@&quot;,Owner:User.Username)-1)</formula>
        <label>CRM User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <formula>CASE(CallDisposition, 
&quot;1001&quot;, &quot;Fares &amp; Reservation&quot;, 
&quot;1002&quot;, &quot;Change n Cancellation&quot;, 
&quot;1003&quot;, &quot;Other Assistance&quot;, 
&quot;1004&quot;, &quot;Special Assistance&quot;, 
&quot;1005&quot;, &quot;Arrival n Departure&quot;, 
&quot;1006&quot;, &quot;Corporate Assistance&quot;, 
&quot;1007&quot;, &quot;Spice Vacations&quot;, 
&quot;011&quot;, &quot;Blank Call&quot;, 
&quot;002&quot;, &quot;IROP&quot;, 
&quot;009&quot;, &quot;Complaints&quot;, 
CallDisposition)</formula>
        <label>Disposition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Owner_Zone__c</fullName>
        <formula>TEXT(Owner:User.Zone__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Zone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Completed_On__c</fullName>
        <description>for capturing when the task was completed ;for Customer experience related reports</description>
        <label>Task Completed On</label>
        <type>DateTime</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>